--- a/namate-dev-assignment/src/App.css
+++ b/namate-dev-assignment/src/App.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     background: #5CDB95;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    height: 100%;
 }
 .container {
     display: flex;
@@ -92,5 +93,105 @@ body {
     margin-left: 5;
     cursor: pointer;
     border-radius: 5;
+    color: #05386B;
+}
+
+.route-error {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50;
+    flex-direction: column;
+}
+
+.page-not-found-gif {
+    height: 400;
+    width: 400;
+    border-radius: 10;
+}
+
+.go-back-button {
+    width: 100;
+    height: 50;
+    background: #05386B;
+    color: #EDF5E1;
+    cursor: pointer;
+    border-radius: 5;
+    margin-top: 10;
+}
+
+.mate-container {
+    display: flex;
+    /* justify-content: space-between; */
+    gap: 30;
+    padding: 50;
+}
+
+.mate-card {
+    width: 300;
+    height: 300;
+    display: flex;
+    justify-content: center;
+    background: #EDF5E1;
+    box-shadow: 0 15px 25px rgba(129, 124, 124, 0.2);
+    border-radius: 15;
+    flex-direction: column;
+    padding: 10;
+    color: #05386B;
+}
+
+.mate-card > img {
+    border-radius: 15;
+}
+
+.mate-card-details {
+    width: 100%;
+    background: #EDF5E1;
+    box-shadow: 0 15px 25px rgba(129, 124, 124, 0.2);
+    border-radius: 15;
+    flex-direction: row;
+    padding: 10;
+    color: #05386B;
+    padding: 20;
+}
+
+.left-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20
+}
+
+.mate-card-info {
+    display: flex;
+    max-width: 300;
+    gap: 10;
+    align-items: center;
+    background: #EDF5E1;
+    box-shadow: 0 15px 25px rgba(129, 124, 124, 0.2);
+    border-radius: 15;
+    flex-direction: column;
+    padding: 10;
+    color: #05386B;
+}
+
+.follower-following {
+    margin: 5
+}
+
+.repo-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10;
+    justify-content: space-between;
+}
+
+.repo-item {
+    width: 500px;
+    display: flex;
+    align-items: center;
+}
+
+.repo-link {
+    text-decoration: none;
     color: #05386B;
 }
