--- a/namate-dev-assignment/src/App.css
+++ b/namate-dev-assignment/src/App.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
-    background: #5CDB95;
+    background: #130c2b;
+    color: #EDF5E1;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     height: 100%;
 }
@@ -14,10 +15,18 @@ body {
     display: flex;
     align-items: center;
     height: 50px;
-    background: #05386B;
-    color: #EDF5E1;
     padding: 10;
     justify-content: space-between;
+}
+
+.header-light {
+    background: #3f8cd9;
+    color: #130c2b;
+}
+
+.header-dark {
+    background: #05386B;
+    color: #EDF5E1;
 }
 
 .header-heading {
@@ -26,24 +35,35 @@ body {
 }
 
 .card-continer {
-    display: flex;
+    display: grid;
     gap: 20;
-    flex-wrap: wrap;
+    grid-template-columns: 4fr 4fr 4fr;
+    grid-column-gap: 20px;
     padding: 30;
-    justify-content: space-between;
+    place-items: center;
 }
 
 .card {
     width: 400px;
     display: flex;
     justify-content: center;
-    background: #EDF5E1;
+    /* background: #05386B; */
     box-shadow: 0 15px 25px rgba(129, 124, 124, 0.2);
     border-radius: 10px;
     flex-direction: column;
     padding: 10;
-    color: #05386B;
 }
+
+.card-dark {
+    background: #05386B;
+    color: #EDF5E1;
+}
+
+.card-light {
+    background: #3f8cd9;
+    color: #130c2b;
+}
+
 .card-img {
     width: 250px;
     height: 250px;
@@ -79,6 +99,7 @@ body {
     height: 35px;
     width: 250px;
     border-radius: 5px;
+    background: #EDF5E1;
     margin-top: 10;
 }
 
@@ -94,6 +115,7 @@ body {
     cursor: pointer;
     border-radius: 5;
     color: #05386B;
+    background: #EDF5E1;
 }
 
 .search-box-button-get-team {
@@ -153,15 +175,33 @@ body {
     border-radius: 15;
 }
 
+.mate-card-dark {
+    background: #05386B;
+    color: #EDF5E1;
+}
+
+.mate-card-light {
+    color: #05386B;
+    background: #EDF5E1;
+}
+
 .mate-card-details {
     width: 100%;
-    background: #EDF5E1;
     box-shadow: 0 15px 25px rgba(129, 124, 124, 0.2);
     border-radius: 15;
     flex-direction: row;
     padding: 10;
-    color: #05386B;
     padding: 20;
+}
+
+.mate-card-details-dark {
+    background: #05386B;
+    color: #EDF5E1;
+}
+
+.mate-card-details-light {
+    color: #05386B;
+    background: #EDF5E1;
 }
 
 .left-container {
@@ -175,11 +215,19 @@ body {
     max-width: 300;
     gap: 10;
     align-items: center;
-    background: #EDF5E1;
     box-shadow: 0 15px 25px rgba(129, 124, 124, 0.2);
     border-radius: 15;
     flex-direction: column;
     padding: 10;
+}
+
+.mate-card-info-dark {
+    background: #05386B;
+    color: #EDF5E1;
+}
+
+.mate-card-info-light {
+    background: #EDF5E1;
     color: #05386B;
 }
 
@@ -202,7 +250,7 @@ body {
 
 .repo-link {
     text-decoration: none;
-    color: #05386B;
+    color: inherit;
 }
 
 .search-box {
@@ -234,4 +282,14 @@ body {
     border-radius: 5;
     background-color: #273748;
     color: #EDF5E1;
+}
+
+.theme-button {
+    cursor: pointer;
+    margin-right: 10;
+}
+
+.repo-icon {
+    width: 20px;
+    height: 20px;
 }
