--- a/namate-dev-assignment/src/App.css
+++ b/namate-dev-assignment/src/App.css
@@ -1,38 +1,6 @@
-body {
-    margin: 0;
-    background: #130c2b;
-    color: #EDF5E1;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    height: 100%;
-}
-.container {
-    display: flex;
-    gap: 5;
-    flex-direction: column;
-}
-
-.header {
-    display: flex;
-    align-items: center;
-    height: 50px;
-    padding: 10;
-    justify-content: space-between;
-}
-
-.header-light {
-    background: #3f8cd9;
-    color: #130c2b;
-}
-
-.header-dark {
-    background: #05386B;
-    color: #EDF5E1;
-}
-
-.header-heading {
-    font-size: 22px;
-    font-weight: 600;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 .card-continer {
     display: grid;
@@ -96,11 +64,12 @@ body {
 }
 
 .input-search {
-    height: 35px;
+    height: 40px;
     width: 250px;
     border-radius: 5px;
-    background: #EDF5E1;
     margin-top: 10;
+    background: #05386B;
+    color: #EDF5E1;
 }
 
 .input-label-search {
@@ -114,8 +83,8 @@ body {
     margin-left: 5;
     cursor: pointer;
     border-radius: 5;
-    color: #05386B;
-    background: #EDF5E1;
+    color: #EDF5E1;
+    background-color: #05386B;
 }
 
 .search-box-button-get-team {
