--- a/namate-dev-assignment/src/App.css
+++ b/namate-dev-assignment/src/App.css
@@ -5,14 +5,15 @@
 .card-continer {
     display: grid;
     gap: 20;
-    grid-template-columns: 4fr 4fr 4fr;
+    grid-template-columns: 3fr 3fr 3fr 3fr;
     grid-column-gap: 20px;
     padding: 30;
     place-items: center;
 }
 
 .card {
-    width: 400px;
+    width: 300px;
+    height: 400;
     display: flex;
     justify-content: center;
     /* background: #05386B; */
@@ -33,14 +34,14 @@
 }
 
 .card-img {
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
     display: flex;
     align-self: center;
 }
 
 .card-content {
-    padding: 20;
+    padding: 10;
 }
 
 .hr {
@@ -48,7 +49,7 @@
 }
 
 .card-name {
-    font-size: 22;
+    font-size: 20;
     font-weight: 500;
     margin-bottom: 5;
 }
